// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OneOfAnt should render a radio button group by default 1`] = `
<RadioGroup
  buttonStyle="outline"
  data-testid="id-test_radio_of_one"
  disabled={false}
  id="id-test_radio_of_one"
  label="Select one of"
  onChange={[Function]}
  readOnly={false}
>
  <Radio
    data-testid="id-test_radio_of_one-b"
    key="b"
    type="radio"
    value="b"
  >
    Banana
  </Radio>
  <Radio
    data-testid="id-test_radio_of_one-a"
    key="a"
    type="radio"
    value="a"
  >
    Apples
  </Radio>
  <Radio
    data-testid="id-test_radio_of_one-p"
    key="p"
    type="radio"
    value="p"
  >
    Peaches
  </Radio>
</RadioGroup>
`;

exports[`OneOfDropDownAnt should render a dropdown control 1`] = `
<Dropdown
  data-testid="id-test_drop_down_of_one"
  disabled={false}
  label="Select one of"
  mouseEnterDelay={0.15}
  mouseLeaveDelay={0.1}
  overlay={
    <Menu
      data-testid="id.testDropDownOfOne-menu"
    >
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-b"
        onClick={[Function]}
      >
        Banana
      </MenuItem>
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-a"
        onClick={[Function]}
      >
        Apples
      </MenuItem>
      <MenuItem
        data-testid="id-test_drop_down_of_one-menu-p"
        onClick={[Function]}
      >
        Peaches
      </MenuItem>
    </Menu>
  }
  trigger={
    Array [
      "click",
    ]
  }
>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    id="id-test_drop_down_of_one"
    loading={false}
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
        "justifyContent": "space-between",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#aaaaaa",
        }
      }
    >
      ...
    </span>

    <ForwardRef(DownOutlined) />
  </Button>
</Dropdown>
`;

exports[`OneOfDropDownFormAnt should render a dropdown control with form 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfDropDownAnt
    disabled={false}
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfFormAnt should render a radio button group with form by default 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfAnt
    disabled={false}
    id="id-test_radio_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`OneOfSelectAnt should render a select control 1`] = `
<Select
  bordered={true}
  choiceTransitionName="zoom"
  data-testid="id.testSelectOfOne"
  disabled={false}
  id="id-test_select_of_one"
  label="Select one of"
  mode="tags"
  onChange={[Function]}
  placeholder="..."
  transitionName="slide-up"
>
  <Option
    data-testid="id-test_select_of_one-b"
    key="b"
    value="b"
  >
    Banana
  </Option>
  <Option
    data-testid="id-test_select_of_one-a"
    key="a"
    value="a"
  >
    Apples
  </Option>
  <Option
    data-testid="id-test_select_of_one-p"
    key="p"
    value="p"
  >
    Peaches
  </Option>
</Select>
`;

exports[`OneOfSelectFormAnt should render a select control with form 1`] = `
<FormItemAnt
  operation="bound OneOfImpl"
>
  <OneOfSelectAnt
    disabled={false}
    id="id-test_select_of_one"
    operation="bound OneOfImpl"
    readOnly={false}
  />
</FormItemAnt>
`;
